# singularity-themes

./: CONTRIBUTING.md  README.md  meson.build
Singularity/: index.theme
Singularity-Material/: index.theme
themes/Kids/gtk-3.0/: gtk.css
themes/Kids/gtk-4.0/: gtk-dark.css  gtk.css
themes/Kids/singularity/: style-light.css  style.css
themes/Singularity/gtk-3.0/: gtk.css
themes/Singularity/gtk-4.0/: gtk-dark.css
themes/SingularityExample/singularity/: style-light.css  style.css
themes/SingularityShell/: index.theme
themes/SingularityShell/gtk-3.0/: gtk.css
themes/SingularityShell/gtk-4.0/: gtk-dark.css  gtk.css
