project('singularity-themes', version: '0.1.0', meson_version: '>= 0.59.0')

install_subdir('themes/SingularityShell',
  install_dir: get_option('datadir') / 'themes',
  strip_directory: false)

install_subdir('themes/Kids',
  install_dir: get_option('datadir') / 'themes',
  strip_directory: false)

install_subdir('Singularity',
  install_dir: get_option('datadir') / 'icons',
  strip_directory: false)
